src/terraform/modules/keycloak/forward/auth-forward-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-forward-auth-deployment
  namespace: keycloak
spec:
  selector:
    matchLabels:
      app: traefik-forward-auth
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: traefik-forward-auth
    spec:
      containers:
      - name: traefik-forward-auth
        image: thomseddon/traefik-forward-auth:latest
        ports:
          - name: http
            containerPort: 4181
            protocol: TCP
        volumeMounts:
          - name: certs
            mountPath: /etc/ssl/certs/ca.crt
            subPath: ca.crt
            readOnly: true
          - name: certs
            mountPath: /etc/ssl/certs/tls.crt
            subPath: tls.crt
            readOnly: true
          - name: certs
            mountPath: /etc/ssl/certs/tls.key
            subPath: tls.key
            readOnly: true
      volumes:
        - name: certs
          secret:
            secretName: keycloak-cert
            items:
            - key: ca.crt
              path: ca.crt
            - key: tls.crt
              path: tls.crt
            - key: tls.key
              path: tls.key
