src/terraform/modules/keycloak/forward/auth-forward-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
  namespace: ${namespace}
spec:
  type: ClusterIP
  selector:
    app: traefik-forward-auth
  ports:
    - port: 4181
      targetPort: http
      protocol: TCP
      name: http
