src/terraform/modules/keycloak/forward/auth-forward-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-forward-auth
  namespace: keycloak
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    #traefik.ingress.kubernetes.io/router.middlewares: default-keycloakforwardauth@kubernetescrd
spec:
  rules:
    - host: auth.k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-forward-auth
                port:
                  number: 4181
  tls:
  - secretName: auth-forward-cert
    hosts:
    - auth.k8s.local
